--- a/docker-compose.uffizzi.yml
+++ b/docker-compose.uffizzi.yml
@@ -3,8 +3,8 @@ version: '3'
 # uffizzi integration
 x-uffizzi:
   ingress:
-    service: dashboard
-    port: 4040
+    service: nginx
+    port: 8081
 
 services:
 
@@ -42,20 +42,27 @@ services:
         ports:
             - "4040:4040"
         environment:
-        - PARSE_DASHBOARD_SERVER_URL=http://localhost:1337/parse
         - PARSE_DASHBOARD_MASTER_KEY=parse@master123!
         - PARSE_DASHBOARD_APP_ID=parse
         - PARSE_DASHBOARD_APP_NAME=MyParseApp
         - PARSE_DASHBOARD_USER_ID=admin
         - PARSE_DASHBOARD_USER_PASSWORD=password
-        - MOUNT_PATH=/
+        - MOUNT_PATH=/dashboard
         - PARSE_DASHBOARD_ALLOW_INSECURE_HTTP=1
+        entrypoint: /bin/sh
+        command:
+         - "-c"
+         - "PARSE_DASHBOARD_SERVER_URL=$$UFFIZZI_URL/parse node Parse-Dashboard/index.js"
         #- PARSE_DASHBOARD_COOKIE_SESSION_SECRET=AB8849B6-D725-4A75-AA73-AB7103F0363F
-        command: parse-dashboard --dev
         deploy:
           resources:
             limits:
               memory: 1000M
+
+  nginx:
+    image: nginx:alpine
+    volumes:
+      - ./nginx-uffizzi:/etc/nginx
 
 volumes:
   postgres_data:
