--- a/nginx-uffizzi/nginx.conf
+++ b/nginx-uffizzi/nginx.conf
@@ -6,8 +6,8 @@ http {
         listen 8081;
 
         location / {
-            default_type text/html;
-            return 200 "<!DOCTYPE html><a href="/dashboard/">Click Here to Visit Parse Dashboard</a>\n";
+            root   /usr/share/nginx/html;
+            index  index.html index.htm;
         }
 
         location /dashboard {
