--- a/docker-compose.uffizzi.yml
+++ b/docker-compose.uffizzi.yml
@@ -63,6 +63,7 @@ services:
     image: nginx:alpine
     volumes:
       - ./nginx-uffizzi:/etc/nginx
+      - ./nginx-uffizzi/html:/usr/share/nginx/html
 
 volumes:
   postgres_data:
