--- a/nginx-uffizzi/nginx.conf
+++ b/nginx-uffizzi/nginx.conf
@@ -7,8 +7,8 @@ http {
         listen 8081;
 
         location / {
-            root /usr/share/nginx/html;
-            index index.html index.htm;
+            default_type text/html;
+            return 200 "<!DOCTYPE html><a href="/dashboard/"><b>Click to Visit Parse Dashboard</b></a>\n";
         }
 
         location /dashboard {
