--- a/nginx-uffizzi/nginx.conf
+++ b/nginx-uffizzi/nginx.conf
@@ -8,7 +8,7 @@ http {
 
         location / {
             default_type text/html;
-            return 200 "<!DOCTYPE html><a href="/dashboard/"><b>Click to Visit Parse Dashboard</b></a>\n";
+            return 200 "<!DOCTYPE html><a href='/dashboard/''><b>Click to Visit Parse Dashboard</b></a>\n";
         }
 
         location /dashboard {
