--- a/docker-compose.uffizzi.yml
+++ b/docker-compose.uffizzi.yml
@@ -1,14 +1,14 @@
 version: '3'
 
-# # uffizzi integration
-# x-uffizzi:
-#   ingress:
-#     service: nginx
-#     port: 8081
-#   continuous_previews:
-#     deploy_preview_when_pull_request_is_opened: true
-#     delete_preview_when_pull_request_is_closed: true
-#     share_to_github: true
+# uffizzi integration
+x-uffizzi:
+  ingress:
+    service: nginx
+    port: 8081
+  continuous_previews:
+    deploy_preview_when_pull_request_is_opened: true
+    delete_preview_when_pull_request_is_closed: true
+    share_to_github: true
 
 services:
 
