--- a/docker-compose.uffizzi.yml
+++ b/docker-compose.uffizzi.yml
@@ -68,7 +68,7 @@ services:
   nginx:
     image: nginx:alpine
     volumes:
-      - ./nginx-uffizzi/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx-uffizzi:/etc/nginx
       - ./nginx-uffizzi/html:/usr/share/nginx/html
 
 volumes:
